moved addCandidate loop to contract

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
 
     <div id="candidateTemplate" style="display: none;">
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="panel panel-default panel-pet">
+        <div class="panel panel-default panel-candidate">
           <div class="panel-heading">
-            <h3 class="panel-title">Scrappy</h3>
+            <h3 class="panel-title">No Candidate</h3>
           </div>
           <div class="panel-body">
             <img alt="140x140" data-src="holder.js/140x140" class="img-rounded img-center" style="width: 100%;" src="https://pbs.twimg.com/media/C-lF63nXYAAzX3Q.jpg" data-holder-rendered="true">
