--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
           <h1 class="text-center">Vote for your candidate!</h1>
+			<button class="btn btn-default btn-add-candidate" type="button">Add Candidates</button>
           <hr/>
           <br/>
         </div>
