vote handling moved to VoteHandler.js module

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
           <h1 class="text-center">Vote for your candidate!</h1>
-			<button class="btn btn-default btn-add-candidate" type="button">Add Candidates</button>
+			<button class="btn btn-default btn-add-candidate" type="button">Add Candidates and Vote</button>
+			<button class="btn btn-default btn-crowdfounding" type="button">Crowdfounding</button>
           <hr/>
           <br/>
         </div>
@@ -58,5 +59,6 @@
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
+    <script type="module" src="js/VoteHandler.js"></script>
   </body>
 </html>
